--- a/css/adventure-time-theme.css
+++ b/css/adventure-time-theme.css
@@ -63,6 +63,13 @@
 	border-radius: 5%;
 }
 
+.Dashboard-morado{
+	display: inline;
+	background-color:#8E44AD;
+	border-radius: 5%;
+	padding: 5%;
+}
+
 #main-content{
 	position: relative;
 	top: 100px;
@@ -70,6 +77,7 @@
 
 .sub-menu{
 	list-style: none;
+	padding: 7%;
 }
 
 .a-blanco{
@@ -164,4 +172,18 @@
 .hidden-xs{
 	color:white;
 	padding-left: 3%;
+}
+
+.form-panel{
+	background-color: white;
+	margin-bottom: 2%;
+    margin-left: 3%;
+    padding-left: 2%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+}
+
+.form-group{
+	border-bottom: 1px solid gray;
+	padding-bottom: 1%;
 }
